Archive2/f3/b3367ee38b1a58/output
main.cpp:9:9: error: ‘uint’ does not name a type
  static uint seqElems_[20];
         ^
main.cpp: In member function ‘int KnuthSeq::operator()(int)’:
main.cpp:5:10: error: ‘seqElems_’ was not declared in this scope
   return seqElems_[i];
          ^
main.cpp: At global scope:
main.cpp:12:27: error: ‘int KnuthSeq::seqElems_ [20]’ is not a static member of ‘struct KnuthSeq’
 int KnuthSeq::seqElems_[20] = {1, 4, 13, 40, 121, 364, 1093, 3280, 9841,
                           ^
